

                CHANGES IN party VERSION 1.3-16 (2024-07-18)

    o    Fix Rd issues

                CHANGES IN party VERSION 1.3-15 (2024-04-29)

    o    Fix Rd issues

                CHANGES IN party VERSION 1.3-14 (2023-11-27)

    o    fix print statement in RandomForest.c

                CHANGES IN party VERSION 1.3-13 (2023-03-17)

    o    do not create variables in workspace

                CHANGES IN party VERSION 1.3-12 (2023-02-28)

    o    update CITATION file

                CHANGES IN party VERSION 1.3-11 (2022-10-07)

    o    fix party_init prototype

                CHANGES IN party VERSION 1.3-10 (2022-04-25)

    o    proper use of inherits in two instances

                CHANGES IN party VERSION 1.3-9 (2021-09-27)

    o    #define USE_FC_LEN_T as requested by CRAN 2021-09-25


                CHANGES IN party VERSION 1.3-8 (2021-08-23)

    o    update reference output


                CHANGES IN party VERSION 1.3-7 (2021-03-03)

    o    suggest randomForest


                CHANGES IN party VERSION 1.3-6 (2021-02-08)

    o    fix LaTeX problem

    o    documentation updates


                CHANGES IN party VERSION 1.3-5 (2020-06-11)

    o    allow varperm to change in calls to R_get_nodeID (feature request by Dries Debeer)


                CHANGES IN party VERSION 1.3-4 (2020-03-05)

    o    /bin/sh is portable


                CHANGES IN party VERSION 1.3-3 (2019-03-04)

    o    make rchk happier


                CHANGES IN party VERSION 1.3-2 (2019-03-01)

    o    move ExpectCovar and ExpectCovarInfluence classes from coin to
         party


                CHANGES IN party VERSION 1.3-1 (2018-08-08)

    o    varimpAUC() now calls varImp::varImpAUC()


                CHANGES IN party VERSION 1.3-0 (2018-04-20)

    o    New scale argument for predict(<cforest>, scale = TRUE, ...).
         For simple regression forests, predicting
         the conditional mean by nearest neighbor weights with